--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 </head>
 <body>
 
-  <div class="modal-option-dark">
-      <div class="message-modal">
-          <h2>Modo Oscuro</h2>
-          <p>F2</p>
-      </div>
-  </div>  
   
   <main class="home">
   	<header id="header">
@@ -26,48 +20,48 @@
   			 </div>
          <div class="nav__data">
              <ul>
-             	<li><a href="#">Inicio</a>
+             	<li class="link_nav"><a href="#">Inicio</a>
               </li>
-             	<li><a href="#About-me">Sobre mi</a></li>
-             	<li><a href="#skill">Habilidades</a></li>
-              <li><a href="#educacion">Educación</a></li>
-             	<li><a href="#servicios">Servicios</a></li>
-              <li><a href="#proyectos">Proyectos</a></li>
-             	<li><a href="#contacto">Contactame</a></li>
-              <li><i class="ri-moon-fill"></i></li>
+             	<li class="link_nav"><a href="#About-me">Sobre mi</a></li>
+             	<li class="link_nav"><a href="#skill">Habilidades</a></li>
+              <li class="link_nav"><a href="#educacion">Educación</a></li>
+             	<li class="link_nav"><a href="#servicios">Servicios</a></li>
+              <li class="link_nav"><a href="#proyectos">Proyectos</a></li>
+             	<li class="link_nav"><a href="#contacto">Contactame</a></li>
+              <li class="link_nav_icon"><i class="ri-moon-fill"></i></li>
              </ul>
 
             </div> 
             <div class="menu-bar">
-              <i class="ri-function-line"></i>
+              <i class="ri-function-line" id="burger_icon"></i>
             </div>
   		</div>
   	</header>
 
 
   	  <div class="Presentacion">
-        <div class="red-social">
-              <a href="#"><i class="ri-facebook-box-fill"></i></a>
-               <a href="#"><i class="ri-instagram-fill"></i></a>
-               <a href="#"><i class="ri-github-fill"></i></a>
-        </div>
   	  	  <div class="profile-description">
   	  	  	 <h2 class="profile-titulo">Hola, Me llamo  Abel</h2>
   	  	  	 <b class="b-home">Front-End Developer</b>
   	  	   <p class="profile-description-me">
-  	  	   	Hola , soy Abel Hurtado Sandoval y tengo 18 años ,<br> amante de la <b>Programación</b> y <br>con hambre de seguir aprendiendo.<br> Hago sitios webs <br>completamente <b>Gratis</b></p>
+  	  	   	 Soy Abel Hurtado Sandoval y tengo 19 años , amante de la <b>Programación</b> y <br>con hambre de seguir aprendiendo.<br> Hago sitios webs <br>completamente <b>Interactivos</b></p>
              <div class="verMas">
              	 <a href="#">Contactame</a>
                <i class="ri-arrow-right-line"></i>
   	  	  </div>
           <div class="scroll-btn">
-              <i class="ri-mouse-line"><a href="#About-me">Baja mi kingstone</a>
+              <i class="ri-mouse-line"><a href="#About-me">Bajar</a>
               <i class="ri-arrow-down-line"></i></i>
           </div>
   	  </div>
-                <div class="profile">
-             <img src="img/profile.svg">
-          </div>
+       <div class="profile">
+         <img src="img/profile.svg">
+      </div>
+          <div class="red-social">
+            <a  target="_blank" href="https://www.facebook.com/AbelBenjamin2003"><i class="ri-facebook-box-fill"></i></a>
+             <a href="#"  ><i class="ri-instagram-fill"></i></a>
+             <a target='_blank' href="https://github.com/Abelsirius"><i class="ri-github-fill"></i></a>
+      </div>
     </div>
 
      <section id="About-me">
@@ -79,9 +73,7 @@
 
             <div class="About-me-content">
                <div class="imgBx-about-me">
-                  <div class="imgBx">
                      <img src="img/about.png">
-                  </div>
                </div>
 
                <div class="About-me-description">
@@ -205,7 +197,7 @@
                <div class="data-education">
                   <div class="data-description">
                     <h3>Autodidacta</h3>
-                     <p>Cursos-Soy Dalto</p>
+                     <p>Cursos Online</p>
                      <div class="fecha-studio">
                         <!-- icon -->
                         <span>2020-2021</span>
@@ -213,8 +205,8 @@
                      </div>
                   </div>
                    <div class="data-description">
-                      <h3>Desarrolador Web</h3>
-                      <p>Cursos-Soy Dalto</p>
+                      <h3>Desarrollo Web</h3>
+                      <p>Cursos y documentaciones</p>
                       <div class="fecha-studio">
                          <!-- ìcon -->
                          <span>2020-2021</span>
@@ -225,22 +217,12 @@
 <!--            <div class="line-time">
               
            </div> -->
-           <div class="data-work">
-              <div class="data-work-description">
-                 <h3>Diseño web</h3>
-                 <p>Cursos-Online-Soy Dalto</p>
-                 <div class="fecha-studio">
-                    <!-- icon -->
-                    <span>2020-2021</span>
-                 </div>             
-              </div>
-           </div>
          </div>
           <div class="content-calificaciones contentDos hidden">
            <div class="data-calificaciones">
                <div class="data-education">
                   <div class="data-description">
-                    <h3>Front-end Developer</h3>
+                    <h3>Diseñador Web</h3>
                      <p>Free Lancer</p>
                      <div class="fecha-studio">
                         <!-- icon -->
@@ -248,14 +230,7 @@
 
                      </div>
                   </div>
-                   <div class="data-description">
-                      <h3>Diseñador Web</h3>
-                      <p>Free Lancer</p>
-                      <div class="fecha-studio">
-                         <!-- ìcon -->
-                         <span>2020-2021</span>
-                      </div>
-                    </div>
+
                </div>
              </div>
          </div>
@@ -265,7 +240,7 @@
           <div class="content-items">
               <div class="titule-modal">
                 <h3>Diseñador web</h3>
-                <i class="ri-close-line"></i>
+                <i class="ri-close-line iconsCloseModales"></i>
               </div>
                <ul>
                   <li><i class="ri-checkbox-circle-fill"></i>Desarrollo la interfaz del usuario</li>
@@ -276,7 +251,7 @@
           <div class="content-items">
               <div class="titule-modal">
                 <h3>Diseñador web</h3>
-                <i class="ri-close-line close2"></i>
+                <i class="ri-close-line iconsCloseModales close2"></i>
               </div>
                <ul>
                   <li><i class="ri-checkbox-circle-fill"></i>
@@ -369,15 +344,15 @@
                      </div>
                   </div>
                </div>
-                </div>
-                   <div class="swiper-button-next">
-                                          <i class="ri-arrow-right-s-line swiper-proyecto-icon"></i>
-                   </div>
-                   <div class="swiper-button-prev">
-                                          <i class="ri-arrow-left-s-line swiper-proyecto-icon"></i>
-                   </div>
+               <div class="swiper-button-next">
+                  <i class="ri-arrow-right-s-line swiper-proyecto-icon"></i>
+</div>
+<div class="swiper-button-prev">
+                  <i class="ri-arrow-left-s-line swiper-proyecto-icon"></i>
+</div>
 
-                   <div class="swiper-pagination"></div>
+<div class="swiper-pagination"></div>
+                </div>
            </div>
      </section>
      <section class="">
