--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/swiper-bundle.min.css">
@@ -46,7 +47,7 @@
   	  	   <p class="profile-description-me">
   	  	   	 Soy Abel Hurtado Sandoval y tengo 19 años , amante de la <b>Programación</b> y <br>con hambre de seguir aprendiendo.<br> Hago sitios webs <br>completamente <b>Interactivos</b></p>
              <div class="verMas">
-             	 <a href="#">Contactame</a>
+             	 <a href="#contacto">Contactame</a>
                <i class="ri-arrow-right-line"></i>
   	  	  </div>
           <div class="scroll-btn">
@@ -93,8 +94,8 @@
                          <span>Experiencias<br> en Compañias</span>
                     </div>
                     </div>
-                    <div class="descargar-cv">
-                          <p>Descargar CV</p>
+                    <div class="descargar-cv" id='descargar-cv'>
+                          <a  target="_blank" href="abelCv.doc" download="true">Explorar CV</a>
                           <i class="ri-download-2-line"></i>
                     </div>
                </div>
@@ -358,7 +359,7 @@
      <section class="">
        
      </section>
-     <section class="container-contact">
+     <section class="container-contact" id="contacto">
            <div class="contact-title">
               <h3>Contactame</h3>
               <p>escribeme un mensaje</p>
@@ -369,21 +370,21 @@
                      <i class="ri-phone-fill"></i>
                      <div class="phone-data">
                          <h3>Contactame</h3>
-                         <span>000 000 000</span>
+                         <span>922260216</span>
                      </div>
                   </div>
                   <div class="contact-data">
                      <i class="ri-mail-line"></i>
                      <div class="Gmail">
                          <h3>Gmail</h3>
-                         <span>abelgm.crack@gmail.com</span>
+                         <span>abeldev2003@gmail.com</span>
                      </div>
                   </div>
                   <div class="contact-data">
                      <i class="ri-map-pin-line"></i>
                      <div class="Gmail">
                          <h3>Ubicación</h3>
-                         <span>Perú-Trujillo</span>
+                         <span>La Libertad - Trujillo</span>
                      </div>
                   </div>
               </div>
