--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               </div>
               <form>
                   <label><img src="img/chau.png"></label>
-                 <input type="text" name="" placeholder="Nombre" class="name">
+                 <input type="text" name="" placeholder="Nombre" class="namE">
                  <input type="email" name="" placeholder="Gmail" class="email">
                  <textarea placeholder="Escribe un mensaje"></textarea>
                  <input type="submit" value="Mandar mensaje" class="btn-submit">
