--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                      </div>
                   </div>
               </div>
-              <form>
+              <form class="form">
                   <label><img src="img/chau.png"></label>
                  <input type="text" name="" placeholder="Nombre" class="namE">
                  <input type="email" name="" placeholder="Gmail" class="email">
