--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                   <label><img src="img/chau.png"></label>
                  <input type="text" name="" placeholder="Nombre" class="namE">
                  <input type="email" name="" placeholder="Gmail" class="email">
-                 <textarea placeholder="Escribe un mensaje"></textarea>
+                 <textarea placeholder="Escribe un mensaje" class="mensaje"></textarea>
                  <input type="submit" value="Mandar mensaje" class="btn-submit">
               </form>
            </div>
