--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
                      </div>
                   </div>
               </div>
-              <form class="form">
+              <form class="form_api">
                   <label><img src="img/chau.png"></label>
                  <input type="text" name="" placeholder="Nombre" class="namE">
-                 <input type="email" name="" placeholder="Gmail" class="email">
-                 <textarea placeholder="Escribe un mensaje" class="mensaje"></textarea>
+                 <input type="email" name="" placeholder="Gmail" class="email_api">
+                 <textarea placeholder="Escribe un mensaje" class="mensaje_api"></textarea>
                  <input type="submit" value="Mandar mensaje" class="btn-submit">
               </form>
            </div>
