--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                  <input type="text" name="" placeholder="Nombre" class="namE">
                  <input type="email" name="" placeholder="Gmail" class="email_api">
                  <textarea placeholder="Escribe un mensaje" class="mensaje_api"></textarea>
-                 <input type="submit" value="Mandar mensaje" class="btn-submit">
+                 <input type="submit" class="btn-submit">
               </form>
            </div>
      </section>
