--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
       <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/swiper-bundle.min.css">
+      <link rel="icon" type="x-icon" href="favicon.ico">
 	<meta charset="utf-8">
-	<title>Abel</title>
+	<title>AbelDev</title>
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 <body>
@@ -17,11 +18,13 @@
   	<header id="header">
   		<div class="nav">
   			 <div class="Logo">
-  			 	 <h1 class="Abel">Abel</h1>
+         
+  			 	 <h1 class="Abel"> Abel_Dev </h1>
+                <img  class="img_logo_title" alt="logo de codigo html" src="favicon.ico"/>
   			 </div>
          <div class="nav__data">
              <ul>
-             	<li class="link_nav"><a href="#">Inicio</a>
+             	<li class="link_nav active"><a href="#">Inicio</a>
               </li>
              	<li class="link_nav"><a href="#About-me">Sobre mi</a></li>
              	<li class="link_nav"><a href="#skill">Habilidades</a></li>
@@ -29,7 +32,7 @@
              	<li class="link_nav"><a href="#servicios">Servicios</a></li>
               <li class="link_nav"><a href="#proyectos">Proyectos</a></li>
              	<li class="link_nav"><a href="#contacto">Contactame</a></li>
-              <li class="link_nav_icon"><i class="ri-moon-fill"></i></li>
+              <li class="link_nav_icon"><span class="mode_oscuro">Modo Oscuro</span><i class="ri-moon-fill"></i></li>
              </ul>
 
             </div> 
@@ -307,7 +310,7 @@
                         <img src="img/Demon-PeruTravel.png">
                      </div>
                       <div class="data-web-site">
-                       <h2>Sitio Web Moderno</h2>
+                       <h2>Sitio Web Moderno Peru Travel</h2>
                        <p class="website-description"> Sitio web adaptable a todos los dipositivos con animaciones interactivas                      
                        </p>
                      <div class="demostracion"id="pageOne">
@@ -318,28 +321,28 @@
                   </div>
                   <div class="view-slide swiper-slide">
                      <div class="imgBx-img">
-                        <img src="img/akat.png">
+                        <img src="img/shop.png">
                      </div>
                       <div class="data-web-site">
-                       <h2>Sitio Web Moderno</h2>
+                       <h2>Sitio Web DeyserShop</h2>
                        <p class="website-description"> Sitio web adaptable a todos los dipositivos con animaciones interactivas                      
                        </p>
                      <div class="demostracion" id="pageTwo">
-                       <a target="blank">Demo</a>
+                       <a target="blank" href="https://abelsirius.github.io/DeyserShop/">Demo</a>
                        <i class="ri-arrow-right-line" id="arrow"></i>
                      </div>
                      </div>
                   </div>
                   <div class="view-slide swiper-slide">
                      <div class="imgBx-img">
-                        <img src="img/cali.png">
+                        <img src="img/cons.png">
                      </div>
                       <div class="data-web-site">
-                       <h2>Sitio Web Moderno</h2>
+                       <h2>Sitio Web Constructora Hurtado</h2>
                        <p class="website-description"> Sitio web adaptable a todos los dipositivos con animaciones interactivas                      
                        </p>
                      <div class="demostracion" id="pageTree">
-                       <a target="blank" href="file:///C:/Users/PC-011/OneDrive%20-%20CIBERTEC/Desktop/CSS,%20JS%20Y%20HTML/Pagina%20web%203/index.html" >Demo</a>
+                       <a target="blank" href="https://abelsirius.github.io/Constructora/#trabajadores" >Demo</a>
                        <i class="ri-arrow-right-line" id="arrow"></i>
                      </div>
                      </div>
@@ -370,7 +373,7 @@
                      <i class="ri-phone-fill"></i>
                      <div class="phone-data">
                          <h3>Contactame</h3>
-                         <span>922260216</span>
+                         <span>926488675</span>
                      </div>
                   </div>
                   <div class="contact-data">
@@ -388,12 +391,12 @@
                      </div>
                   </div>
               </div>
-              <form class="form_api">
-                  <label><img src="img/chau.png"></label>
+              <form class="form">
+                  <label><img src="img/chau.png"><h3 class="men_form">Mensaje</h3></label>
                  <input type="text" name="" placeholder="Nombre" class="namE">
-                 <input type="email" name="" placeholder="Gmail" class="email_api">
-                 <textarea placeholder="Escribe un mensaje" class="mensaje_api"></textarea>
-                 <input type="submit" class="btn-submit">
+                 <input type="email" name="" placeholder="Gmail" class='email'>
+                 <textarea placeholder="Escribe un mensaje" class='mensaje'></textarea>
+                 <input type="submit" value="Mandar mensaje" class="btn-submit">
               </form>
            </div>
      </section>
@@ -411,9 +414,9 @@
                   <h4>Contactame</h4>
                </div>
                    <div class="footer-redSocial">
-                    <i class="ri-facebook-circle-fill"></i>
+                    <a target="_blank" href="https://www.facebook.com/AbelBenjamin2003/"><i class="ri-facebook-circle-fill"></i></a>
                     <i class="ri-instagram-fill"></i>
-                    <i class="ri-github-fill"></i>
+                    <a target="_blank" href="https://github.com/Abelsirius"><i class="ri-github-fill"></i></a>
                    </div>
            </footer>
     <script type="text/javascript" src="js/swiper-bundle.min.js"></script>
