--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -37,33 +39,35 @@
         <div class="contener_titulo_inicio">
             <span class="inicio_data_subtitulo"><i class="ri-star-fill"></i> D-Su Mare <i
                     class="ri-star-fill"></i></span>
-            <h2 class="titulo_inicio uno">DSUMARE CEVICHERIA REST</h2>
-            <h2 class="titulo_inicio sub">maruchitas bravas</h2>
+            <h2 class="titulo_inicio uno">DSUMARE CEVICHERIA </br>REST</h2>
+            <h2 class="titulo_inicio sub">Maruchitas bravas</h2>
 
             <div class="contenedor_btn"><a href="#Explorar" class="descubrir_platillos">Explorar</a></div>
         </div>
     </div>
-    <div class="contenedor_about">
-        <div class="content_about_cards">
-            <i class="fa-solid fa-building-circle-check"></i>
-            <div class="content_service_card">
-                 <h2 class="titulo">Servicio Excelente</h2>
-                 <p>Descubre la excelencia del ceviche en "Dsumare". Nuestro restaurante .</p></div>
+      <div class=" content_about swiper">
+        <div class="contenedor_about swiper-wrapper">
+            <div class="content_about_cards swiper-slide">
+                <i class="fa-solid fa-building-circle-check"></i>
+                <div class="content_service_card">
+                     <h2 class="titulo">Servicio Excelente</h2>
+                     <p>Descubre la excelencia del ceviche en "Dsumare". Nuestro restaurante .</p></div>
+            </div>
+            <div class="content_about_cards swiper-slide">
+                <i class="ri-e-bike-2-fill"></i>
+                <div class="content_service_card">
+                     <h2 class="titulo">Delivery</h2>
+                     <p>Descubre la excelencia del ceviche en "Dsumare". Nuestro restaurante .</P>  </div>
+            </div>
+            <div class="content_about_cards swiper-slide">
+                <i class="ri-gift-fill"></i>
+                <div class="content_service_card">
+                     <h2 class="titulo">Promos</h2>
+                     <p>Descubre la excelencia del ceviche en "Dsumare". Nuestro restaurante.</p>
+                           </div>
+            </div>
         </div>
-        <div class="content_about_cards">
-            <i class="ri-e-bike-2-fill"></i>
-            <div class="content_service_card">
-                 <h2 class="titulo">Delivery</h2>
-                 <p>Descubre la excelencia del ceviche en "Dsumare". Nuestro restaurante .</P>  </div>
-        </div>
-        <div class="content_about_cards">
-            <i class="ri-gift-fill"></i>
-            <div class="content_service_card">
-                 <h2 class="titulo">Promos</h2>
-                 <p>Descubre la excelencia del ceviche en "Dsumare". Nuestro restaurante.</p>
-                       </div>
-        </div>
-    </div>
+      </div>
 <section class="contenedor_section_categorias" id="Categorias">
     <h2 class="titulo_section_categoria">Mejores  Categorias</h2>
     <div class="content_favoritos_destacados">
@@ -79,6 +83,7 @@
        <div class="card_platillo_destacado destacado_lanjostas">
         <h3 class="titulo_destacado">lanjostas</h3>
         <a href="#">ver mas</a>
+       </div>
    </div>
          
     </div>
@@ -306,7 +311,7 @@
         <div class="titulos_restaurante">
             <h2 class="contenedor_subtitulo servicios">Ven a darte una vuelta por nuestro Restaurante</h2>
         </div>
-                <div class="swiper-slide view_restaurant one">
+                <div class=" view_restaurant one">
                     <div class="imgBx">
                         <img src="./img/viewDesumare.jpg">
                     </div>
@@ -427,6 +432,7 @@
     </script>
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/scrollreveal.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/codigo.js"></script>
 
 </body>
