--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" rel="preload" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -30,7 +30,7 @@
                 <li><a href="#Categorias" class="nav_link">Categorias</a></li>
                 <li><a href="#Menu" class="nav_link">Menu</a></li>
                 <li><a href="#Restaurante" class="nav_link">Horario</a></li>
-                <li><a href="#Contactanos" class="nav_link">Contactanos</a></li>
+                <li><a href="#Contactanos" class="nav_link">Reservar</a></li>
                 <li class="item_icon"><i class="ri-moon-line"></i></li>
             </ul>
         </nav>
@@ -99,7 +99,7 @@
                  <div class="card_producto_best_shop">
                      <h5 class="descuento_">10%</h5>
                      <div class="content_img_like_name">
-                           <img src="./img/Dsumare.png">
+                           <img loading="lazy" src="./img/Dsumare.png">
                            <div class="content_starts">
                             <i class="ri-star-fill"></i>
                             <i class="ri-star-fill"></i>
@@ -117,7 +117,7 @@
                  <div class="card_producto_best_shop">
                     <h5 class="descuento_">10%</h5>
                     <div class="content_img_like_name">
-                          <img src="./img/Dsumare.png">
+                          <img loading="lazy" src="./img/Dsumare.png">
                           <div class="content_starts">
                            <i class="ri-star-fill"></i>
                            <i class="ri-star-fill"></i>
@@ -135,7 +135,7 @@
                 <div class="card_producto_best_shop">
                     <h5 class="descuento_">10%</h5>
                     <div class="content_img_like_name">
-                          <img src="./img/Dsumare.png">
+                          <img  loading="lazy" src="./img/Dsumare.png">
                           <div class="content_starts">
                            <i class="ri-star-fill"></i>
                            <i class="ri-star-fill"></i>
@@ -153,7 +153,7 @@
                 <div class="card_producto_best_shop">
                     <h5 class="descuento_">10%</h5>
                     <div class="content_img_like_name">
-                          <img src="./img/Dsumare.png">
+                          <img loading="lazy" src="./img/Dsumare.png">
                           <div class="content_starts">
                            <i class="ri-star-fill"></i>
                            <i class="ri-star-fill"></i>
@@ -171,7 +171,7 @@
                 <div class="card_producto_best_shop">
                     <h5 class="descuento_">10%</h5>
                     <div class="content_img_like_name">
-                          <img src="./img/Dsumare.png">
+                          <img loading="lazy" src="./img/Dsumare.png">
                           <div class="content_starts">
                            <i class="ri-star-fill"></i>
                            <i class="ri-star-fill"></i>
@@ -191,7 +191,7 @@
 <section class="muestras">
    <div class="container">
             <div class="slider">
-                <div class="slides" style="--img: url(../img/img_destacado_5.jpg)">
+                <div class="slides" style="--img: url(../img/img_destacado_5.jpg)" >
                       <div class="content">
                         <h2>PLATO POPULAR</h2>
                         <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, 
@@ -219,7 +219,7 @@
                     deserunt perspiciatis officia iusto ullam aliquid magni atque.</P>
             </div>
       </div>
-      <div class="slides" style="--img: url(../img/banner.jpeg)">
+      <div class="slides" style="--img: url(../img/banner.jpg)">
         <div class="content">
             <h2>PLATO POPULAR</h2>
             <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, 
@@ -237,7 +237,7 @@
         <h2 class="titulo_menu contenedor_titulo">Mira Nuestro Menu </h2>
         <div class="cards_of_menu">
             <div class="card_platillo">
-              <img src="./img/img_destacado_5.jpg"/>
+              <img loading="lazy" src="./img/img_destacado_5.jpg"/>
               <div class="data_of_plato">
                 <div class="div_name_plato"><span class="name_plato">De Cangrejo</span><p class="price_plato">s/.35</p></div>
 <p class="name_plato_menu">Ceviche</p>
@@ -248,7 +248,7 @@
 
             </div>
             <div class="card_platillo">
-                <img src="./img/img_destacado_5.jpg"/>
+                <img loading="lazy" src="./img/img_destacado_5.jpg"/>
                 <div class="data_of_plato">
                     <div class="div_name_plato"><span class="name_plato">De Cangrejo</span><p class="price_plato">s/.35</p></div>
 
@@ -260,7 +260,7 @@
 
               </div>
               <div class="card_platillo">
-                <img src="./img/img_destacado_5.jpg"/>
+                <img loading="lazy" src="./img/img_destacado_5.jpg"/>
                 <div class="data_of_plato">
                     <div class="div_name_plato"><span class="name_plato">De Cangrejo</span><p class="price_plato">s/.35</p></div>
 <p class="name_plato_menu">Ceviche</p>
@@ -272,7 +272,7 @@
 
               </div>
               <div class="card_platillo">
-                <img src="./img/img_destacado_3.jpg"/>
+                <img loading="lazy" src="./img/img_destacado_3.jpg"/>
                 <div class="data_of_plato">
                     <div class="div_name_plato"><span class="name_plato">De Cangrejo</span><p class="price_plato">s/.35</p></div>
 <p class="name_plato_menu">Ceviche</p>
@@ -283,7 +283,7 @@
 
               </div>
               <div class="card_platillo">
-                <img src="./img/img_destacado_2.jpg"/>
+                <img loading="lazy" src="./img/img_destacado_2.jpg"/>
                 <div class="data_of_plato">
                    <div class="div_name_plato"><span class="name_plato">De Cangrejo</span><p class="price_plato">s/.35</p></div>
 
@@ -295,7 +295,7 @@
 
               </div>
                           <div class="card_platillo">
-              <img src="./img/img_destacado_3.jpg"/>
+              <img loading="lazy" src="./img/img_destacado_3.jpg"/>
               <div class="data_of_plato">
                 <div class="div_name_plato"><span class="name_plato">De Cangrejo</span><p class="price_plato">s/.35</p></div>
               <p class="name_plato_menu">Ceviche</p>
@@ -313,7 +313,7 @@
         </div>
                 <div class=" view_restaurant one">
                     <div class="imgBx">
-                        <img src="./img/viewDesumare.jpg">
+                        <img  loading="lazy" src="./img/viewDesumare.jpg">
                     </div>
                     <div class="data_description_restaurant">
                         <h2 class="titulo_restaurante">Atención</h2>
@@ -337,7 +337,7 @@
       </div>
     </div>
     <div class="section_contact" id="Contactanos">
-           <h2 class="contenedor_titulo">Contactanos</h2>
+           <h2 class="contenedor_titulo">Reservar</h2>
           
            <div class="content_form_disign">
             <div class="social-media-icons">
@@ -430,10 +430,10 @@
             slider.prepend(slides[slides.length - 1]);
            })
     </script>
-    <script src="./js/swiper-bundle.min.js"></script>
-    <script src="./js/scrollreveal.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/codigo.js"></script>
+    <script src="./js/swiper-bundle.min.js" defer></script>
+    <script src="./js/scrollreveal.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <script src="./js/codigo.js" defer></script>
 
 </body>
 
